# everengine-main

./: .gitignore  Architecture.md  CMakeLists.txt  LICENSE  Makefile  README.md  imgui.ini
EverEngineCore/: CMakeLists.txt
EverEngineCore/includes/EverEngineCore/: Application.hpp  Event.hpp  Log.hpp  Window.hpp
EverEngineCore/includes/EverEngineCore/Utils/: test.hpp
EverEngineCore/src/EverEngineCore/: Application.cpp  Window.cpp  Window.hpp
EverEngineCore/src/EverEngineCore/Platform/: Platform.cpp  Platform.hpp
EverEngineCore/src/EverEngineCore/Platform/Generic/: FileSystem.cpp  FileSystem.hpp
EverEngineCore/src/EverEngineCore/Rendering/OpenGL/: RendererOpenGL.cpp  RendererOpenGL.hpp  Shader.cpp  Shader.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexLayout.hpp
EverEngineCore/src/EverEngineCore/Runtime/HAL/: CPUinfo.cpp  CPUinfo.hpp  MemoryInfo.cpp  MemoryInfo.hpp  StorageInfo.cpp  StorageInfo.hpp
EverEngineCore/src/EverEngineCore/Utils/: test.cpp
EverEngineEditor/: CMakeLists.txt
EverEngineEditor/src/: main.cpp
assets/shaders/: fragment.frag
shaders/: vertex.vert
